--- a/prework-study-guide/index.html
+++ b/prework-study-guide/index.html
@@ -48,7 +48,10 @@
       <section class="card" id="javascript-section">
         <h2>JavaScript</h2>
      <ul>
-       <li>Enter your JavaScript notes here</li>
+      <li>A variable is a named container that allows us to store data in our code.</li>
+      <li>Control flow is the order in which a computer executes code in a script.</li>
+      <li>Built in randomMath and Math functions let you pick random items from your array</li>
+      <li>Always define a variable before you call for it.</li>
      </ul>
    </section>
       </section>
